--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -13,7 +13,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/txt_viewdate"
+            android:id="@+id/txt_viewDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0"
