--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,18 +2,18 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="Profile"
-        android:id="@+id/profilePicture"
-        android:orderInCategory="102"
-        android:icon="@drawable/profile"/>
-
-    <item android:title="Setting"
-        android:id="@+id/setting"
+    <item android:title="Alert Timer"
+        android:id="@+id/alertTimer"
         android:orderInCategory="100"
-        android:icon="@drawable/setting"/>
+        android:icon="@drawable/alert" />
+
+    <item android:title="Warning Timer"
+        android:id="@+id/warningTimer"
+        android:orderInCategory="101"
+        android:icon="@drawable/warning" />
 
     <item android:title="Logout"
         android:id="@+id/logout"
-        android:orderInCategory="101"
-        android:icon="@drawable/logout"/>
+        android:orderInCategory="102"
+        android:icon="@drawable/logout" />
 </menu>
